<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/iv_primary_icon"
        style="@style/IconColorPrimaryStyle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_android_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextColorPrimaryStyle"
        android:padding="8dp"
        android:text="@string/this_is_a_primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_primary_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_primary_icon" />

    <ImageView
        android:id="@+id/iv_secondary_icon"
        style="@style/IconColorSecondaryStyle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_brightness_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_primary_icon" />

    <TextView
        style="@style/TextColorSecondaryStyle"
        android:padding="8dp"
        android:text="@string/this_is_secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_secondary_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_secondary_icon" />

    <TextView
        android:id="@+id/tv_light_theme"
        style="@style/TextColorPrimaryStyle"
        android:layout_margin="30dp"
        android:background="@drawable/button_primary_rect_rounded_bg"
        android:padding="8dp"
        android:text="@string/light_theme"
        app:layout_constraintBottom_toTopOf="@+id/tv_dark_theme"
        app:layout_constraintEnd_toStartOf="@+id/tv_dim_light_theme"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_dim_light_theme"
        style="@style/TextColorPrimaryStyle"
        android:layout_margin="30dp"
        android:background="@drawable/button_primary_rect_rounded_bg"
        android:padding="8dp"
        android:text="@string/dim_light_theme"
        app:layout_constraintBottom_toTopOf="@+id/tv_dim_dark_blue_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_light_theme" />

    <TextView
        android:id="@+id/tv_dark_theme"
        style="@style/TextColorPrimaryStyle"
        android:layout_margin="30dp"
        android:background="@drawable/button_primary_rect_rounded_bg"
        android:padding="8dp"
        android:text="@string/dark_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_dim_dark_blue_theme"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_dim_dark_blue_theme"
        style="@style/TextColorPrimaryStyle"
        android:layout_margin="30dp"
        android:background="@drawable/button_primary_rect_rounded_bg"
        android:padding="8dp"
        android:text="@string/dark_blue_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dark_theme" />

</androidx.constraintlayout.widget.ConstraintLayout>